# FaultSense-LSTM-Anomaly-Detection-on-NASA-CMAPSS

./: Dockerfile  LICENSE  README.md  app.py  check.py  docker-compose.yml  ekf_baseline.py  gitignore  lstm_autoencoder.py  metrics.py  preprocess.py  pyproject.toml  requirements.txt  test_metrics.py  train.py  train_baseline.py  ukf.py
.github/workflows/: ci.yml
api/: main.py
checkpoints/: faultsense_fd001.pt  faultsense_fd003.pt  ridge_engineered_fd001.pkl  ridge_engineered_fd003.pkl  ridge_raw_fd001.pkl  ridge_raw_fd003.pkl
faultsense/: metrics.py
tests/: test_metrics.py
