[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "faultsense"
version = "0.1.0"
description = "LSTM Autoencoder + EKF anomaly detection and RUL prediction for industrial turbofan engines (NASA CMAPSS)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Becha", email = "mohamedbecha55555@gmail.com" }
]
keywords = ["predictive maintenance", "anomaly detection", "RUL", "LSTM", "Kalman filter", "CMAPSS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.22",
]
tracking = [
    "mlflow>=2.13",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]
all = [
    "faultsense[api,dashboard,tracking,dev]"
]

[project.urls]
Homepage = "https://github.com/momo-2609/faultsense"
Repository = "https://github.com/momo-2609/faultsense"

[tool.setuptools.packages.find]
where = ["."]
include = ["faultsense*", "models*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
verbose = true

[tool.coverage.run]
source = ["faultsense", "models"]
omit = ["tests/*"]
